--- a/dev/partials/help/menu.html
+++ b/dev/partials/help/menu.html
@@ -1,9 +1,9 @@
 
 <ul class="nav nav-pills nav-stacked" ng-controller="SubMenuController">
 	<li ng-class="{active: currentPage === 'monitoring'}">
-		<a href="#help/monitoring">Monitoring</a>
+		<a ng-click="goto('help/monitoring')">Monitoring</a>
 	</li>
 	<li ng-class="{active: currentPage === 'documentation'}">
-		<a href="#help/documentation">Documentation</a>
+		<a ng-click="goto('help/documentation')">Documentation</a>
 	</li>
 </ul>
