--- a/dev/partials/indicators/menu.html
+++ b/dev/partials/indicators/menu.html
@@ -1,13 +1,13 @@
 
 <ul class="nav nav-pills nav-stacked" ng-controller="SubMenuController">
 	<li ng-class="{active: isSelected('indicators')}">
-		<a href="#indicators">Indicateurs</a>
+		<a ng-click="goto('indicators')">Indicateurs</a>
 	</li>
 	<li ng-class="{active: isSelected('themes')}">
-		<a href="#themes">Thématiques</a>
+		<a ng-click="goto('themes')">Thématiques</a>
 	</li>
 	<li ng-class="{active: isSelected('types')}">
-		<a href="#types">Types</a>
+		<a ng-click="goto('types')">Types</a>
 	</li>
 </ul>
 
