--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -6,161 +6,149 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#indicators">Indicateurs</a></li>
+			<li><a href="#indicators" translate>shared.indicators</a></li>
 			<li class="active">{{indicator.name}}</li>
 		</ol>
 
 		<form class="form-horizontal" role="form" name="indicatorForm" novalidate>
 			<fieldset>
-				<legend>Définition</legend>
+				<legend translate>indicator.definition</legend>
 
 				<div class="form-group">
-					<label for="input-standard" class="col-sm-2 control-label">Standard</label>
+					<label for="input-standard" class="col-sm-2 control-label" translate>indicator.standard</label>
 					<div class="col-sm-10">
 						<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
 					</div>
 				</div>
 
 				<div class="form-group" show-errors>
-					<label for="input-name" class="col-sm-2 control-label">Nom</label>
+					<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
 					<div class="col-sm-10">
 						<input id="input-name"
 							   class="form-control"
 							   type="text"
 							   ng-model="indicator.name"
 							   name="name"
-							   placeholder="Exemple: Part des dossiers patient bien remplis"
+							   placeholder="{{'indicator.name_ph'|translate}}"
 							   required />
 					
-						<p class="help-block" ng-if="indicatorForm.name.$error.required">
-							Ce champ est obligatoire
-						</p>
+						<p class="help-block" ng-if="indicatorForm.name.$error.required" translate>form.mandatory</p>
 					</div>
 				</div>
 
 				<div class="form-group" show-errors>
-					<label for="input-description" class="col-sm-2 control-label">Description</label>
+					<label for="input-description" class="col-sm-2 control-label" translate>shared.description</label>
 					<div class="col-sm-10">
 						<textarea id="input-description"
 								  name="description"
 								  class="form-control"
 								  ng-model="indicator.description"
 								  required
-								  placeholder="Exemple: Mesurer le niveau de formation du personnel médical qui rempli les dossiers patients. Sa mesure est facile sur des projets de petite dimension, à éviter dans un autre cadre."></textarea>
+								  placeholder="{{'indicator.description_ph'|translate}}"></textarea>
 
-						<p class="help-block" ng-if="indicatorForm.description.$error.required">
-							Ce champ est obligatoire
-						</p>
+						<p class="help-block" ng-if="indicatorForm.description.$error.required" translate>form.mandatory</p>
 					</div>
 				</div>
 
 				<div class="form-group" show-errors>
-					<label for="input-history" class="col-sm-2 control-label">Historique</label>
+					<label for="input-history" class="col-sm-2 control-label" translate>indicator.history</label>
 					<div class="col-sm-10">
 						<textarea id="input-history"
 								  name="history"
 								  ng-model="indicator.history"
 								  class="form-control"
-								  placeholder="Exemple: Défini en 2007 par l'OMS et utilisé sur les projets de UNICEF ... cet indicateur a permi de suivre les objectifs ..."></textarea>
+								  placeholder="{{'indicator.history_ph'|translate}}"></textarea>
 					</div>
 				</div>
 
 				<div class="form-group" show-errors>
-					<label for="input-unit" class="col-sm-2 control-label">Unité</label>
+					<label for="input-unit" class="col-sm-2 control-label" translate>indicator.unit</label>
 					<div class="col-sm-10">
 						<select id="input-unit"
 								name="unit"
 								ng-model="indicator.unit"
 								class="form-control">
-							<option value="">Autre</option>
-							<option value="%">Pour cent (%)</option>
-							<option value="‰">Pour mille (‰)</option>
+							<option value="" translate>indicator.other</option>
+							<option value="%" translate>indicator.percent</option>
+							<option value="‰" translate>indicator.permille</option>
 						</select>
 					</div>
 				</div>
 			</fieldset>
 
 			<fieldset>
-				<legend>Classement</legend>
+				<legend translate>indicator.categorization</legend>
 
 				<div class="form-group">
-					<label for="input-types" class="col-sm-2 control-label">Types</label>
+					<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
 					<div class="col-sm-10">
 						<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required>
-							<ui-select-match placeholder="Sélectionnez un ou plusieurs types">
-								{{$item.name}}
-							</ui-select-match>
-							<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">
-								{{type.name}}
-							</ui-select-choices>
+							<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
+							<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
 						</ui-select>
 					</div>
 				</div>
 
 				<div class="form-group">
-					<label for="input-themes" class="col-sm-2 control-label">Thématiques</label>
+					<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
 					<div class="col-sm-10">
 						<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required>
-							<ui-select-match placeholder="Sélectionnez une ou plusieures thématiques">
-								{{$item.name}}
-							</ui-select-match>
-							<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">
-								{{theme.name}}
-							</ui-select-choices>
+							<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
+							<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
 						</ui-select>
 					</div>
 				</div>
 			</fieldset>
 
 			<fieldset>
-				<legend>Calcul</legend>
+				<legend translate>indicator.computation</legend>
 
 				<div class="form-group">
-					<label for="input-sum-allowed" class="col-sm-2 control-label">Sommable</label>
+					<label for="input-sum-allowed" class="col-sm-2 control-label" translate>indicator.sum_allowed</label>
 					<div class="col-sm-10">
 						<input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed">
 					</div>
 				</div>
 
 				<div class="form-group">
-					<label for="name" class="col-sm-2 control-label">Formules</label>
+					<label for="name" class="col-sm-2 control-label" translate>indicator.formulas</label>
 					<div class="col-sm-10">
 						<table class="table table-bordered table-condensed"
 							   ng-repeat="(formulaId, formula) in indicator.formulas"
 							   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].isValid ? '#ddd' : 'darkred'}}">
 							<tr>
-								<td style="width: 250px">Nom</td>
+								<td style="width: 250px" translate>shared.name</td>
 								<td>
 									<div class="input-group">
 										<input type="text"
 											   class="form-control"
-											   placeholder="Exemple: Pourcentage entre dossiers patient bien remplis et total"
+											   placeholder="{{'indicator.formula_name_ph'|translate}}"
 											   ng-model="indicator.formulas[formulaId].name" ng-change="updateFormula(formulaId)" />
 
 										<span class="input-group-btn">
-											<button class="btn btn-danger" ng-click="deleteFormula(formulaId)">Retirer</button>
+											<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate>shared.remove</button>
 										</span>
 									</div>
 								</td>
 							</tr>
 							<tr>
-								<td>Formule</td>
+								<td translate>indicator.formula</td>
 								<td>
 									<input type="text"
 										   class="form-control"
 										   ng-model="indicator.formulas[formulaId].expression"
 										   ng-change="updateFormula(formulaId)"
-										   placeholder="Exemple: 100 * a / b" />
+										   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
 								</td>
 							</tr>
 							<tr ng-repeat="symbol in indicator.formulas[formulaId].symbols">
-								<td>Paramètre <strong>"{{symbol}}"</strong></td>
+								<td>{{'indicator.parameter'|translate}} <strong>"{{symbol}}"</strong></td>
 								<td>
 									<ui-select ng-model="indicator.formulas[formulaId].parameters[symbol]"
 											   ng-change="updateFormula(formulaId)"
 											   theme="bootstrap">
 
-										<ui-select-match placeholder="Choisissez un indicateur">{{$select.selected.name}}</ui-select-match>
+										<ui-select-match placeholder="{{'shared.choose_indicator'|translate}}">{{$select.selected.name}}</ui-select-match>
 										<ui-select-choices repeat="indicator._id as indicator in indicators | filter: {name: $select.search}">
 											<span>{{indicator.name}}</span>
 										</ui-select-choices>
@@ -169,7 +157,7 @@
 							</tr>
 						</table>
 
-						<button class="btn btn-default" ng-click="addFormula()">Ajouter une formule</button>
+						<button class="btn btn-default" ng-click="addFormula()" translate>indicator.add_formula</button>
 					</div>
 				</div>
 			</fieldset>
@@ -177,21 +165,15 @@
 			<div>
 				<button class="btn btn-primary"
 						ng-disabled="indicatorForm.$invalid || isUnchanged() || formulaInvalid()"
-						ng-click="save()">
-					Sauvegarder
-				</button>
+						ng-click="save()" translate>shared.save</button>
 
 				<button class="btn btn-warning"
 						ng-disabled="isUnchanged()"
-						ng-click="reset()">
-					Annuler les modifications
-				</button>
+						ng-click="reset()" translate>shared.remove_changes</button>
 				
 				<button class="btn btn-danger"
 						ng-click="remove()"
-						ng-if="indicator._id">
-					Supprimer
-				</button>
+						ng-if="indicator._id" translate>shared.delete</button>
 			</div>
 		</form>
 	</div>
