--- a/dev/partials/indicators/list.html
+++ b/dev/partials/indicators/list.html
@@ -4,12 +4,16 @@
 	</div>
 
 	<div class="col-md-10">
-		
-		Trier par:
+		<ol class="breadcrumb">
+			<li class="active" translate>shared.indicators</li>
+			<li class="active" translate>shared.list</li>
+		</ol>
+
+		{{'indicator.order_by'|translate}}:
 		<select id="sort-input" ng-model="orderField">
-			<option value="name">Ordre alphabétique</option>
-			<option value="-input">Nombre de saisies</option>
-			<option value="-main">Nombre de projets</option>
+			<option value="name">{{'indicator.alphabetical_order'|translate}}</option>
+			<option value="-input">{{'indicator.num_inputs'|translate}}</option>
+			<option value="-main">{{'indicator.num_projects'|translate}}</option>
 		</select>
 
 		<br/><br/>
@@ -17,24 +21,24 @@
 		<div class="indicator-level-1" ng-repeat="(themeId, indicatorByTypes) in hierarchy">
 			<div class="indicator-header" ng-click="open1 = !open1">
 				<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open1, 'fa-minus-circle': open1}"></i>
-				{{themes[themeId].name || 'Sans thématique'}}
+				{{(themes[themeId].name || 'indicator.no_theme')|translate}}
 			</div>
 
 			<div class="indicator-level-2" ng-repeat="(typeId, indicators) in indicatorByTypes" ng-if="open1">
 				<div class="indicator-header" ng-click="open2 = !open2">
 					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
-					{{types[typeId].name || 'Sans type'}}
+					{{(types[typeId].name || 'indicator.no_type')|translate}}
 				</div>
 
 				<div class="indicator-level-3" ng-repeat="indicator in indicators | orderBy:orderField" ng-if="open2">
 					<span class="color" ng-class="{green: indicator.standard}"></span>
 					<span class="name">{{indicator.name}} ({{indicator.main}} projets, {{indicator.dependency}} dépendances, {{indicator.input}} saisies)</span>
-					<a href="#indicators/{{indicator._id}}">Éditer</a>
-					<a href="#indicators/{{indicator._id}}/reporting" ng-if="indicator.main">Statistiques</a>
+					<a href="#indicators/{{indicator._id}}" translate>shared.edit</a>
+					<a href="#indicators/{{indicator._id}}/reporting" ng-if="indicator.main" translate>shared.reporting</a>
 				</div>
 			</div>
 		</div>
 
-		<button class="btn btn-default" ng-click="create()">Créer un nouvel indicateur</button>
+		<button class="btn btn-default" ng-click="create()" translate>indicator.create_new</button>
 	</div>
 </div>
