--- a/dev/partials/indicators/reporting.html
+++ b/dev/partials/indicators/reporting.html
@@ -14,32 +14,32 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#indicators">Catalogue Indicateurs</a></li>
+			<li><a href="#indicators" translate>shared.indicators_catalog</a></li>
 			<li><a href="#indicators/{{indicator._id}}">{{indicator.name}}</a></li>
-			<li class="active">Statistiques</li>
+			<li class="active" translate>shared.reporting</li>
 		</ol>
 
 		<form class="form-horizontal" novalidate>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="indicator" class="col-sm-2 control-label">Début</label>
+						<label for="indicator" class="col-sm-2 control-label" translate>shared.begin</label>
 						<div class="col-sm-10">
 							<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
+						<label for="group-by-input" class="col-sm-2 control-label" translate>shared.columns</label>
 						<div class="col-sm-10">
 							<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
-								<option value="month">Mois</option>
-								<option value="year">Année</option>
+								<option value="month" translate>shared.month</option>
+								<option value="year" translate>shared.year</option>
 							</select>
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
+						<label for="colorize-input" class="col-sm-2 control-label" translate>shared.colorize</label>
 						<div class="col-sm-10">
 							<p class="form-control-static">
 								<input type="checkbox" id="colorize-input" ng-model="colorize" />
@@ -47,27 +47,28 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="indicator" class="col-sm-2 control-label">Fin</label>
+						<label for="indicator" class="col-sm-2 control-label" translate>shared.end</label>
 						<div class="col-sm-10">
 							<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="display-input" class="col-sm-2 control-label">Afficher</label>
+						<label for="display-input" class="col-sm-2 control-label" translate>shared.display</label>
 						<div class="col-sm-10">
 							<select class="form-control" id="display-input" ng-model="display">
-								<option value="value">Valeurs</option>
-								<option value="targetPart">Pourcentage de la cible</option>
-								<option value="baselinePart">Pourcentage de la baseline</option>
+								<option value="value" translate>shared.values</option>
+								<option value="targetPart" translate>shared.target_percentage</option>
+								<option value="baselinePart" translate>shared.baseline_percentage</option>
 							</select>
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="plot-input" class="col-sm-2 control-label">Grapher</label>
+						<label for="plot-input" class="col-sm-2 control-label" translate>shared.plot</label>
 						<div class="col-sm-10">
 							<p class="form-control-static">
 								<input type="checkbox" id="plot-input" ng-model="plot" />
@@ -84,14 +85,14 @@
 			<button
 				class="btn btn-primary btn-xs pull-right"
 				ng-show="plot"
-				ng-click="downloadGraph()">Télécharger le graphique</button>
+				ng-click="downloadGraph()" translate>shared.download_plot</button>
 		</div>
 
 		<div id="chart" ng-show="plot"></div>
 
 		<button class="btn btn-primary btn-xs pull-right"
 				ng-click="downloadCSV()"
-				style="margin-bottom: 10px;">Télécharger le tableau</button>
+				style="margin-bottom: 10px;" translate>shared.download_table</button>
 
 		<table class="table table-bordered table-stripped table-condensed" ng-init="purposeOpen=true">
 			<thead>
