--- a/dev/partials/indicators/theme-list.html
+++ b/dev/partials/indicators/theme-list.html
@@ -6,15 +6,15 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#indicators">Indicateurs</a></li>
-			<li class="active">Liste des thématiques</li>
+			<li><a href="#indicators" translate>shared.indicators</a></li>
+			<li class="active" translate>indicator.themes_list</li>
 		</ol>
 
 		<table class="table table-stripped table-bordered table-condensed">
 			<thead>
 				<tr>
-					<th>Nom</th>
-					<th>Nombre d'indicateurs</th>
+					<th translate>shared.name</th>
+					<th translate>indicator.num_indicators</th>
 					<th style="width:85px"></th>
 				</tr>
 			</thead>
@@ -22,21 +22,19 @@
 				<tr ng-repeat="theme in themes | orderBy: 'name'">
 					<td>{{theme.name}}</td>
 					<td>{{theme.usage || 0}}</td>
-					<td><button class="btn btn-danger btn-xs" ng-disabled="theme.usage" ng-click="remove(theme)">Supprimer</button></td>
+					<td><button class="btn btn-danger btn-xs" ng-disabled="theme.usage" ng-click="remove(theme)" translate>shared.delete</button></td>
 				</tr>
 				<tr>
 					<td colspan="3">
 						<div class="input-group input-group-sm" style="width: 100%">
 							<input type="text" class="form-control" ng-model="newTheme" placeholder="Nom du nouveau thème" ng-enter="add()">
 							<span class="input-group-btn">
-								<button class="btn btn-default" ng-click="add()">Ajouter</button>
+								<button class="btn btn-default" ng-click="add()" translate>shared.add</button>
 							</span>
 						</div>
 					</td>
 				</tr>
 			</tbody>
 		</table>
-
 	</div>
 </div>
-
