--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -6,19 +6,19 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#projects">Projets</a></li>
+			<li><a href="#projects" translate>shared.projects</a></li>
 			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li><a href="#projects/{{project._id}}/forms">Formulaires de saisie</a></li>
+			<li><a href="#projects/{{project._id}}/forms" translate>project.input_forms</a></li>
 			<li class="active">{{form.name}}</li>
 		</ol>
 
 		<form class="form-horizontal" role="form" name="formForm" novalidate>
 
 			<fieldset>
-				<legend>Collecte</legend>
+				<legend translate>project.data_collection</legend>
 
 				<div class="form-group" show-errors>
-					<label for="input-name" class="col-sm-2 control-label">Nom</label>
+					<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
 					<div class="col-sm-10">
 						<input type="text"
 							   class="form-control"
@@ -28,33 +28,32 @@
 							   placeholder="Exemple: Sondage trimestriel"
 							   required />
 						
-						<p class="help-block" ng-if="formForm.name.$error.required">
-							Ce champ est obligatoire
-						</p>
+						<p class="help-block" ng-if="formForm.name.$error.required" translate>form.mandatory</p>
 					</div>
 				</div>
 
 				<div class="form-group" show-errors>
-					<label for="periodicity-input" class="col-sm-2 control-label">Périodicité</label>
+					<label for="periodicity-input" class="col-sm-2 control-label" translate>project.periodicity</label>
 					<div class="col-sm-10">
 						<select class="form-control"
 								name="periodicity"
 								id="periodicity-input"
 								ng-model="form.periodicity">
-							<option value="monthly">Tous les mois</option>
-							<option value="quarterly">Tous les trimestres</option>
-							<option value="planned">Planifiée</option>
+							<option value="monthly" translate>project.monthly</option>
+							<option value="quarterly" translate>project.quarterly</option>
+							<option value="planned" translate>project.planned</option>
 						</select>
 					</div>
 				</div>
 
 				<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly' ">
 					<div class="form-group" show-errors>
-						<label for="periodicity" class="col-sm-2 control-label">Début</label>
+						<label for="periodicity" class="col-sm-2 control-label" translate>shared.begin</label>
 						<div class="col-sm-10">
 							<div class="input-group">
 								<div class="input-group-addon">
-									<input type="checkbox" ng-model="form.useProjectStart" /> Début du projet
+									<input type="checkbox" ng-model="form.useProjectStart" />
+									{{'project.begin'|translate}}
 								</div>
 
 								<input type="month"
@@ -68,11 +67,12 @@
 					</div>
 
 					<div class="form-group" show-errors>
-						<label for="periodicity" class="col-sm-2 control-label">Fin</label>
+						<label for="periodicity" class="col-sm-2 control-label" translate>shared.end</label>
 						<div class="col-sm-10">
 							<div class="input-group">
 								<div class="input-group-addon">
-									<input type="checkbox" ng-model="form.useProjectEnd" /> Fin du projet
+									<input type="checkbox" ng-model="form.useProjectEnd" />
+									{{'project.end'|translate}}
 								</div>
 
 								<input type="month"
@@ -88,7 +88,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Indicateurs</legend>
+				<legend translate>shared.indicators</legend>
 				
 				<table class="table table-bordered table-stripped">
 					<tr ng-repeat="indicator in chosenIndicators">
@@ -101,15 +101,15 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Formulaire de saisie</legend>
+				<legend translate>shared.input_form</legend>
 				
 				<table class="table table-bordered table-stripped">
 					<thead>
 						<tr>
-							<th>Sommable</th>
-							<th>Champ de saisie</th>
-							<th>Source de la valeur</th>
-							<th>Mode de saisie</th>
+							<th translate>project.sumable</th>
+							<th translate>project.input_field</th>
+							<th translate>project.value_source</th>
+							<th translate>project.input_mode</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -125,13 +125,13 @@
 							<td>
 								<div class="btn-group">
 									<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-										Saisie manuelle
+										{{'project.manual_input'|translate}}
 										<span class="caret"></span>
 									</button>
 									<ul class="dropdown-menu" role="menu">
 										<li ng-repeat="(formulaId, formula) in indicatorsById[indicatorId].formulas">
 											<a ng-click="useFormula(indicatorId, formulaId)">{{formula.name}}</a>
-										</td>
+										</li>
 									</ul>
 								</div>
 							</td>
@@ -141,8 +141,15 @@
 			</fieldset>
 
 			<br/>
-			<button ng-click="save()" ng-disabled="formForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" class="btn btn-default">Annuler les modifications</button>
+			<button ng-click="save()"
+					ng-disabled="formForm.$invalid || isUnchanged()"
+					class="btn btn-primary"
+					translate>shared.save</button>
+
+			<button ng-click="reset()"
+					class="btn btn-default"
+					translate>shared.remove_changes</button>
+
 		</form>
 	</div>
 </div>
