--- a/dev/partials/projects/input-entities.html
+++ b/dev/partials/projects/input-entities.html
@@ -6,22 +6,22 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#projects">Projets</a></li>
+			<li><a href="#projects" translate>shared.projects</a></li>
 			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active">Lieux d'activité</li>
+			<li class="active" translate>shared.input_entities</li>
 		</ol>
 
 		<form name="projectForm" novalidate>
 			<table class="table table-bordered table-stripped table-condensed">
 				<thead>
 					<tr>
-						<th>Nom</th>
+						<th translate>shared.name</th>
 						<th style="width:225px"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr ng-if="!project.inputEntities.length">
-						<td colspan="2" style="text-align: center">Aucun lieu d'activité n'a encore été créé!</td>
+						<td colspan="2" style="text-align: center" translate>project.no_input_entities</td>
 					</tr>
 					<tr ng-repeat="inputEntity in project.inputEntities">
 						<td>
@@ -32,23 +32,22 @@
 							</ng-form>
 						</td>
 						<td>
-							<button class="btn btn-default btn-sm" ng-click="stats(inputEntity.id)">Voir les statistiques</button>
-							<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)">Supprimer</button>
+							<button class="btn btn-default btn-sm" ng-click="stats(inputEntity.id)" translate>shared.view_stats</button>
+							<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)" translate>shared.delete</button>
 						</td>
 					</tr>
 				</tbody>
 				<tfoot>
 					<tr>
 						<td colspan="3">
-							<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%">Ajouter</button>
+							<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
 						</td>
 					</tr>
 				</tfoot>
 			</table>
 
-			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default">Annuler les modifications</button>
-
+			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" translate>shared.save</button>
+			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default" translate>shared.remove_changes</button>
 		</form>
 	</div>
 </div>
