--- a/dev/partials/projects/input-groups.html
+++ b/dev/partials/projects/input-groups.html
@@ -6,24 +6,23 @@
 	<div class="col-md-10">
 
 		<ol class="breadcrumb">
-			<li><a href="#projects">Projets</a></li>
+			<li><a href="#projects" translate>shared.projects</a></li>
 			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active">Groupes d'activité</li>
+			<li class="active" translate>shared.input_groups</li>
 		</ol>
 
 		<form name="projectForm" novalidate>
-
 			<table class="table table-bordered table-stripped table-condensed">
 				<thead>
 					<tr>
-						<th style="width:250px">Nom</th>
-						<th>Membres</th>
+						<th style="width:250px" translate>shared.name</th>
+						<th translate>shared.members</th>
 						<th style="width:225px"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr ng-if="!project.inputGroups.length">
-						<td colspan="3" style="text-align: center">Aucun groupe d'activité n'a encore été créé!</td>
+						<td colspan="3" style="text-align: center" translate>project.no_input_groups</td>
 					</tr>
 					<tr ng-repeat="inputGroup in project.inputGroups">
 						<td>
@@ -35,31 +34,29 @@
 						</td>
 						<td>
 							<ui-select multiple ng-model="inputGroup.members" theme="bootstrap">
-								<ui-select-match placeholder="">
-									{{$item.name}}
-								</ui-select-match>
+								<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
 								<ui-select-choices repeat="inputEntity.id as inputEntity in project.inputEntities">
 									{{inputEntity.name}}
 								</ui-select-choices>
 							</ui-select>
 						</td>
 						<td>
-							<button class="btn btn-default btn-sm" ng-click="stats(inputGroup.id)">Voir les statistiques</button>
-							<button class="btn btn-danger btn-sm" ng-click="delete(inputGroup.id)">Supprimer</button>
+							<button class="btn btn-default btn-sm" ng-click="stats(inputGroup.id)" translate>shared.view_stats</button>
+							<button class="btn btn-danger btn-sm" ng-click="delete(inputGroup.id)" translate>shared.delete</button>
 						</td>
 					</tr>
 				</tbody>
 				<tfoot>
 					<tr>
 						<td colspan="3">
-							<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%">Ajouter</button>
+							<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
 						</td>
 					</tr>
 				</tfoot>
 			</table>
 
-			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default">Annuler les modifications</button>
+			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" translate>shared.save</button>
+			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default" translate>shared.remove_changes</button>
 
 		</form>
 	</div>
