--- a/dev/partials/projects/menu.html
+++ b/dev/partials/projects/menu.html
@@ -3,33 +3,42 @@
 
 	<li ng-class="{active: currentPage === 'logical-frame', disabled: projectId === 'new'}">
 		<a ng-click="changePage('logical-frame')"
-		   tooltip="Décrit les objectifs, resultats attendus et activitées mises en oeuvre par le projet."
-		   tooltip-popup-delay="1000">
-			Cadre Logique
-		</a>
+		   tooltip="{{'project.logical_frame_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>shared.logical_frame</a>
 	</li>
 	
 	<li ng-class="{active: currentPage === 'input-entities', disabled: projectId === 'new'}">
 		<a ng-click="changePage('input-entities')"
-		   tooltip="Permet de grouper les lieux d'activité par catégories logiques."
-		   tooltip-popup-delay="1000">Lieux d'activité</a>
+		   tooltip="{{'project.input_entities_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>shared.input_entities</a>
 	</li>
 
 	<li ng-class="{active: currentPage === 'input-groups', disabled: projectId === 'new'}">
 		<a ng-click="changePage('input-groups')"
-		   tooltip="Liste les lieux d'activité du projet où sont collectés les indicateurs. Par exemple des hopitaux, centre de santé, villages..."
-		   tooltip-popup-delay="1000">Groupes d'activité</a>
+		   tooltip="{{'project.input_groups_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>shared.input_groups</a>
 	</li>
 
 	<li ng-class="{active: currentPage === 'forms', disabled: projectId === 'new'}">
 		<a ng-click="changePage('forms')"
-		   tooltip="Déclaration des formulaires et du planning de saisie des indicateurs de suivi du projet."
-		   tooltip-popup-delay="1000">Formulaires de saisie</a>
+		   tooltip="{{'project.input_forms_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>project.input_forms</a>
 	</li>
 	<li ng-class="{active: currentPage === 'inputs', disabled: projectId === 'new'}">
-		<a ng-click="changePage('inputs')">Saisies en attentes</a>
+		<a ng-click="changePage('inputs')"
+		   tooltip="{{'project.waiting_inputs_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>project.waiting_inputs</a>
 	</li>
+
 	<li ng-class="{active: currentPage === 'reporting', disabled: projectId === 'new'}">
-		<a ng-click="changePage('reporting')">Statistiques</a>
+		<a ng-click="changePage('reporting')"
+		   tooltip="{{'project.reporting_tooltip'|translate}}"
+		   tooltip-popup-delay="200"
+		   translate>shared.reporting</a>
 	</li>
 </ul>
