--- a/dev/partials/projects/reporting.html
+++ b/dev/partials/projects/reporting.html
@@ -29,39 +29,38 @@
 	</div>
 
 	<div class="col-md-10">
-
 		<ol class="breadcrumb">
-			<li><a href="#projects">Projets</a></li>
+			<li><a href="#projects" translate>shared.projects</a></li>
 			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active">Statistiques</li>
-			<li class="active" ng-if="group">Groupe d'activité: {{group.name}}</li>
-			<li class="active" ng-if="entity">Lieu d'activité: {{entity.name}}</li>
+			<li class="active" translate>shared.reporting</li>
+			<li class="active" ng-if="group">{{'shared.input_group'|translate}}: {{group.name}}</li>
+			<li class="active" ng-if="entity">{{'shared.input_entity'|translate}}: {{entity.name}}</li>
 		</ol>
 
 		<form class="form-horizontal" novalidate>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="indicator" class="col-sm-2 control-label">Début</label>
+						<label for="indicator" class="col-sm-2 control-label" translate>shared.begin</label>
 						<div class="col-sm-10">
 							<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
+						<label for="group-by-input" class="col-sm-2 control-label" translate>shared.columns</label>
 						<div class="col-sm-10">
 							<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
-								<option value="month">Mois</option>
-								<option value="year">Année</option>
-								<option value="entity">Lieux d'activité</option>
-								<option value="group">Groupe d'activité</option>
+								<option value="month" translate>shared.month</option>
+								<option value="year" translate>shared.year</option>
+								<option value="entity" translate>shared.input_entity</option>
+								<option value="group" translate>shared.input_group</option>
 							</select>
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
+						<label for="colorize-input" class="col-sm-2 control-label" translate>shared.colorize</label>
 						<div class="col-sm-10">
 							<p class="form-control-static">
 								<input type="checkbox" id="colorize-input" ng-model="colorize" />
@@ -72,25 +71,25 @@
 				
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="indicator" class="col-sm-2 control-label">Fin</label>
+						<label for="indicator" class="col-sm-2 control-label" translate>shared.end</label>
 						<div class="col-sm-10">
 							<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="display-input" class="col-sm-2 control-label">Afficher</label>
+						<label for="display-input" class="col-sm-2 control-label" translate>shared.display</label>
 						<div class="col-sm-10">
 							<select class="form-control" id="display-input" ng-model="display">
-								<option value="value">Valeurs</option>
-								<option value="targetPart">Pourcentage de la cible</option>
-								<option value="baselinePart">Pourcentage de la baseline</option>
+								<option value="value" translate>shared.values</option>
+								<option value="targetPart" translate>shared.target_percentage</option>
+								<option value="baselinePart" translate>shared.baseline_percentage</option>
 							</select>
 						</div>
 					</div>
 					
 					<div class="form-group">
-						<label for="plot-input" class="col-sm-2 control-label">Grapher</label>
+						<label for="plot-input" class="col-sm-2 control-label" translate>shared.plot</label>
 						<div class="col-sm-10">
 							<p class="form-control-static">
 								<input type="checkbox" id="plot-input" ng-model="plot" />
@@ -105,14 +104,14 @@
 			<button
 				class="btn btn-primary btn-xs pull-right"
 				ng-show="plot"
-				ng-click="downloadGraph()">Télécharger le graphique</button><br/>
+				ng-click="downloadGraph()" translate>shared.download_plot</button><br/>
 		</div>
 
 		<div id="chart" ng-show="plot" style="overflow: hidden;"></div>
 
 		<button class="btn btn-primary btn-xs pull-right"
 				ng-click="downloadCSV()"
-				style="margin-bottom: 10px;">Télécharger le tableau</button>
+				style="margin-bottom: 10px;" translate>shared.download_table</button>
 
 		<table class="table table-bordered table-stripped table-condensed" ng-init="purposeOpen=true">
 			<thead>
@@ -126,12 +125,12 @@
 				<tr>
 					<td ng-show="plot"></td>
 					<td class="section" colspan="{{cols.length + 1}}">
-						OG: {{project.logicalFrame.goal}}
+						{{'project.goal_short'|translate}}: {{project.logicalFrame.goal}}
 					</td>
 				</tr>
 				<tr ng-repeat="indicatorId in project.logicalFrame.indicators">
 					<td ng-show="plot"><input id="plot-{{indicatorId}}" type="checkbox" ng-model="plots[indicatorId]" ng-change="updateGraph(indicatorId)" /></td>
-					<td><label for="plot-{{indicatorId}}">{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}</label></td>
+					<td><label for="plot-{{indicatorId}}">{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}</label></td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 						<span ng-switch="display" ng-if="data[col.id][indicatorId]">
 							<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
@@ -147,7 +146,7 @@
 					<td class="section indent1" colspan="{{cols.length + 1}}">
 						<a ng-click="purposeOpen=!purposeOpen">
 							<i class="fa" ng-class="{'fa-minus-circle': purposeOpen, 'fa-plus-circle': !purposeOpen}"></i>
-							OS.{{purposeId+1}}: {{purpose.description}}
+							{{'project.purpose_short'|translate}}.{{purposeId+1}}: {{purpose.description}}
 						</a>
 					</td>
 				</tr>
@@ -160,7 +159,7 @@
 					</td>
 					<td class="indent1">
 						<label for="plot-{{indicatorId}}">
-							{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+							{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}
 						</label>
 					</td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
@@ -178,7 +177,7 @@
 					<td class="section indent2" colspan="{{cols.length + 1}}">
 						<a ng-click="outputOpen=!outputOpen">
 							<i class="fa" ng-class="{'fa-minus-circle': outputOpen, 'fa-plus-circle': !outputOpen}"></i>
-							R.{{purposeId+1}}.{{$index+1}}: {{output.description}}
+							{{'project.output_short'|translate}}.{{purposeId+1}}.{{$index+1}}: {{output.description}}
 						</a>
 					</td>
 				</tr>
@@ -188,7 +187,7 @@
 					</td>
 					<td class="indent2">
 						<label for="plot-{{indicatorId}}">
-							{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+							{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}
 						</label>
 					</td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
